# asd_lab_2.5

./: CMakeLists.txt  README.md  main.c
src/: BFS_n_DFS.h  FIFO_n_LIFO.h  X_routines.h  consts_n_structures.h  graph_draw.h
src/c files/: BFS_n_DFS.c  FIFO_n_LIFO.c  X_routines.c  graph_create.c  graph_draw.c
